tweak(scrollbar): customize style

--- a/_404.md
+++ b/_404.md
@@ -1,2 +1,2 @@
 # 404 Error
-Page not found. Please check the URL or [contact](/) us if you think this is a mistake.
+Page not found. Please check the URL or [contact](https://discord.gg/ffz84zfaXF) us if you think this is a mistake.
