--- a/es/_404.md
+++ b/es/_404.md
@@ -1,2 +1,2 @@
 # 404 Error
-No se pudo encontrar esta página. Por favor, revisa la URL o [contacta con nosotros]() si crees que esto es un error.
+No se pudo encontrar esta página. Por favor, revisa la URL o [contacta con nosotros](https://discord.gg/ffz84zfaXF) si crees que esto es un error.
